src/main/java/ru/bmstu/ORM/Compiler/Analyzer/Parser/Parser.java
package ru.bmstu.ORM.Compiler.Analyzer.Parser;

import ru.bmstu.ORM.Compiler.Analyzer.Lexer.Scanner;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Symbol;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Tokens.IdentToken;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Tokens.NumberToken;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Tokens.Token;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Tokens.TokenTag;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.*;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.Common.*;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.Common.Expressions.ArithmeticExpression.*;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.Common.Expressions.BooleanExpression.*;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.Common.Expressions.GeneralExpression.*;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.Common.Types.*;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.Function.*;
import ru.bmstu.ORM.Compiler.Analyzer.Symbols.Variables.Table.*;

import java.util.HashMap;

public class Parser {
    private Scanner scanner;
    private SVar start;
    private Token sym;
    private CreateTableStmtVar currentTable;
    private HashMap<QualifiedNameVar, CreateTableStmtVar> tables;

    public Parser(Scanner scanner) {
        this.scanner = scanner;
        this.start = new SVar();
        this.tables = new HashMap<>();
    }

    public HashMap<QualifiedNameVar, CreateTableStmtVar> getTables() {
        return tables;
    }

    public SVar parse() throws CloneNotSupportedException {
        sym = scanner.nextToken();
        parseS(start);
        return start;
    }

    private void parse(TokenTag tag) throws CloneNotSupportedException {
        if (sym.getTag() == tag)
            sym = scanner.nextToken();
        else
            throw new RuntimeException(tag + " expected, got " + sym);
    }

    //S                    ::= (CREATE CreateTableFunction)*
    private void parseS(SVar s) throws CloneNotSupportedException {
        boolean wasFirst = false;
        while (sym.getTag() == TokenTag.CREATE) {
            s.addSymbol(sym);
            if (!wasFirst) {
                s.setStart(sym.getStart());
                wasFirst = true;
            }
            parse(TokenTag.CREATE);

            CreateTableFunctionVar createTableFunction = new CreateTableFunctionVar();
            parseCreateTableFunction(createTableFunction);
            s.addSymbol(createTableFunction);
            s.setFollow(createTableFunction.getFollow());
        }
        if (sym.getTag() != TokenTag.END_OF_PROGRAM)
            throw new RuntimeException("EOF expected, got " + sym);
    }

    //CreateTableFunctionTrigger ::= (CreateTableStmt ';')
    //                           |   (CreateFunctionStmt ';')
    private void parseCreateTableFunction(CreateTableFunctionVar createTableFunction) throws CloneNotSupportedException {
        if (sym.getTag() == TokenTag.TABLE) {
            CreateTableStmtVar createTableStmt = new CreateTableStmtVar();
            parseCreateTableStmt(createTableStmt);
            createTableFunction.addSymbol(createTableStmt);
            createTableFunction.setStart(createTableStmt.getStart());
            tables.put(createTableStmt.getTableName(), createTableStmt);
        } else if (sym.getTag() == TokenTag.FUNCTION || sym.getTag() == TokenTag.OR) {
            CreateFunctionStmtVar createFunctionStmt = new CreateFunctionStmtVar();
            parseCreateFunctionStmt(createFunctionStmt);
            createTableFunction.addSymbol(createFunctionStmt);
            createTableFunction.setStart(createFunctionStmt.getStart());
        } else {
            throw new RuntimeException("TABLE, FUNCTION, TRIGGER expected, got " + sym);
        }

        createTableFunction.addSymbol(sym);
        createTableFunction.setFollow(sym.getFollow());
        parse(TokenTag.SEMICOLON);
    }

    //CreateTableStmt      ::= TABLE (IF NOT EXISTS)?
    //                         QualifiedName '(' (TableElement (',' TableElement)*)? ')'
    private void parseCreateTableStmt(CreateTableStmtVar createTableStmt) throws CloneNotSupportedException {
        currentTable = createTableStmt;

        createTableStmt.setStart(sym.getStart());
        createTableStmt.addSymbol(sym);
        parse(TokenTag.TABLE);

        if (sym.getTag() == TokenTag.IF) {
            createTableStmt.addSymbol(sym);
            parse(TokenTag.IF);

            createTableStmt.addSymbol(sym);
            parse(TokenTag.NOT);

            createTableStmt.addSymbol(sym);
            parse(TokenTag.EXISTS);
        }

        QualifiedNameVar qualifiedName = new QualifiedNameVar();
        createTableStmt.addSymbol(qualifiedName);
        parseQualifiedName(qualifiedName);
        createTableStmt.setTableName(qualifiedName);
        createTableStmt.addSymbol(sym);
        parse(TokenTag.LPAREN);

        if (sym.getTag() == TokenTag.IDENTIFIER ||
                sym.getTag() == TokenTag.CONSTRAINT) {

            TableElementVar tableElement = new TableElementVar();
            createTableStmt.addSymbol(tableElement);
            parseTableElement(tableElement);

            while (sym.getTag() == TokenTag.COMMA) {
                tableElement.addSymbol(sym);
                parse(TokenTag.COMMA);

                TableElementVar tableElementVar = new TableElementVar();
                createTableStmt.addSymbol(tableElementVar);
                parseTableElement(tableElementVar);
            }
        }

        createTableStmt.addSymbol(sym);
        createTableStmt.setFollow(sym.getFollow());
        parse(TokenTag.RPAREN);
    }

    //QualifiedName        ::= IDENT('.'IDENT)*
    private void parseQualifiedName(QualifiedNameVar qualifiedName) throws CloneNotSupportedException { ;
        qualifiedName.addSymbol(sym);
        qualifiedName.setStart(sym.getStart());

        Token col = sym;

        parse(TokenTag.IDENTIFIER);

        while (sym.getTag() == TokenTag.DOT) {
            if (!col.getFollow().equals(sym.getStart()))
                throw new RuntimeException("Wrong identifier at " + sym.getStart());

            qualifiedName.addSymbol(sym);
            parse(TokenTag.DOT);

            col = sym;
            qualifiedName.addSymbol(col);
            parse(TokenTag.IDENTIFIER);
        }

        qualifiedName.setFollow(col.getFollow());
        if (qualifiedName.size() > 5)
            throw new RuntimeException("Wrong qualified name " + qualifiedName);
    }

    //TableElement         ::= ColumnDef | TableConstraint
    private void parseTableElement(TableElementVar tableElement) throws CloneNotSupportedException {
        if (sym.getTag() == TokenTag.IDENTIFIER) {
            ColumnDefVar columnDef = new ColumnDefVar();
            tableElement.addSymbol(columnDef);
            parseColumnDef(columnDef);
            tableElement.setStart(columnDef.getStart());
            tableElement.setFollow(columnDef.getFollow());
        } else if (sym.getTag() == TokenTag.CONSTRAINT || sym.getTag() == TokenTag.UNIQUE
                || sym.getTag() == TokenTag.PRIMARY || sym.getTag() == TokenTag.FOREIGN){
            TableConstraintVar tableConstraint = new TableConstraintVar();
            tableElement.addSymbol(tableConstraint);
            parseTableConstraint(tableConstraint);
            tableElement.setStart(tableConstraint.getStart());
            tableElement.setFollow(tableConstraint.getFollow());
        } else {
            throw new RuntimeException("Identifier, CONSTRAINT, UNIQUE, PRIMARY or FOREIGN expected, got " + sym);
        }
    }

    //ColumnDef            ::= IDENT Typename ColConstraint*
    private void parseColumnDef(ColumnDefVar columnDef) throws CloneNotSupportedException {
        columnDef.addSymbol(sym);
        columnDef.setStart(sym.getStart());
        Token column = sym;
        parse(TokenTag.IDENTIFIER);

        TypenameVar typename = new TypenameVar();
        columnDef.addSymbol(typename);
        parseTypename(typename);
        columnDef.setFollow(typename.getFollow());
        currentTable.addColumn(columnDef);

        while (sym.getTag() == TokenTag.CONSTRAINT
                || sym.getTag() == TokenTag.NOT
                || sym.getTag() == TokenTag.NULL
                || sym.getTag() == TokenTag.UNIQUE
                || sym.getTag() == TokenTag.PRIMARY
                || sym.getTag() == TokenTag.CHECK
                || sym.getTag() == TokenTag.DEFAULT
                || sym.getTag() == TokenTag.REFERENCES) {

            ColConstraintVar colConstraint = new ColConstraintVar();
            columnDef.addSymbol(colConstraint);
            parseColConstraint(colConstraint);
            columnDef.setFollow(colConstraint.getFollow());
        }
    }

    private void parseIntConst() throws CloneNotSupportedException {
        if (sym.getTag() == TokenTag.BYTE_CONST)
            parse(TokenTag.BYTE_CONST);
        else if (sym.getTag() == TokenTag.SHORT_CONST)
            parse(TokenTag.SHORT_CONST);
        else if (sym.getTag() == TokenTag.INT_CONST)
            parse(TokenTag.INT_CONST);
        else if (sym.getTag() == TokenTag.LONG_CONST)
            parse(TokenTag.LONG_CONST);
        else
            throw new RuntimeException("Wrong number at " + sym + " int number expected");
    }

    //Typename             ::= SimpleTypename ArrayType?
    private void parseTypename(TypenameVar typename) throws CloneNotSupportedException {
        SimpleTypeNameVar simpleTypeName = new SimpleTypeNameVar();
        typename.addSymbol(simpleTypeName);
        parseSympleTypeName(simpleTypeName);
        typename.setCoords(simpleTypeName.getCoords());

        if (sym.getTag() == TokenTag.LBRACKET || sym.getTag() == TokenTag.ARRAY) {
            ArrayTypeVar arrayType = new ArrayTypeVar();
            parseArrayType(arrayType);
            typename.addSymbol(arrayType);
            typename.setFollow(arrayType.getFollow());
        }
    }

    //ArrayType            ::= ( '[' intConst? ']' )+    //intConst ни на что не влияет
    //                     |   ARRAY ('[' intConst ']')?
    private void parseArrayType(ArrayTypeVar arrayType) throws CloneNotSupportedException {
        if (sym.getTag() == TokenTag.LBRACKET) {
            while (sym.getTag() == TokenTag.LBRACKET) {
                arrayType.addSymbol(sym);
                parse(TokenTag.LBRACKET);

                if (sym.getTag() == TokenTag.BYTE_CONST
                        || sym.getTag() == TokenTag.SHORT_CONST
                        || sym.getTag() == TokenTag.INT_CONST
                        || sym.getTag() == TokenTag.LONG_CONST) {
                    arrayType.addSymbol(sym);
                    Token number = sym;
                    parseIntConst();
                    Number value = ((NumberToken) number).getValue();
                    if (value.intValue() <= 0)
                        throw new RuntimeException("Array with negative size: " + number);
                }

                arrayType.setFollow(sym.getFollow());
                arrayType.addSymbol(sym);
                parse(TokenTag.RBRACKET);
            }
        } else if (sym.getTag() == TokenTag.ARRAY) {
            arrayType.setFollow(sym.getFollow());
            arrayType.addSymbol(sym);
            parse(TokenTag.ARRAY);

            if (sym.getTag() == TokenTag.LBRACKET) {
                arrayType.addSymbol(sym);
                parse(TokenTag.LBRACKET);

                arrayType.addSymbol(sym);
                Token number = sym;
                parseIntConst();
                Number value = ((NumberToken) number).getValue();
                if (value.intValue() <= 0)
                    throw new RuntimeException("Array with negative size: " + number);

                arrayType.setFollow(sym.getFollow());
                arrayType.addSymbol(sym);
                parse(TokenTag.RBRACKET);
            }
        } else {
            throw new RuntimeException("'[' or ARRAY expected, got " + sym);
        }
    }

    //SimpleTypename       ::= NumericType | CharacterType | DateTimeType | RECORD | BOOLEAN
    private void parseSympleTypeName(SimpleTypeNameVar simpleTypeName) throws CloneNotSupportedException {
        if (sym.getTag() == TokenTag.CHARACTER
                || sym.getTag() == TokenTag.CHAR
                || sym.getTag() == TokenTag.VARCHAR) {

            CharacterTypeVar characterType = new CharacterTypeVar();
            simpleTypeName.addSymbol(characterType);
            parseCharacterType(characterType);
            simpleTypeName.setCoords(characterType.getCoords());
        } else if (sym.getTag() == TokenTag.DATE
                || sym.getTag() == TokenTag.TIME
                || sym.getTag() == TokenTag.TIMESTAMP) {

            DateTimeTypeVar dateTimeType = new DateTimeTypeVar();
            simpleTypeName.addSymbol(dateTimeType);
            parseDateTimeType(dateTimeType);
            simpleTypeName.setCoords(dateTimeType.getCoords());
        } else if (sym.getTag() == TokenTag.RECORD) {
            simpleTypeName.addSymbol(sym);
            simpleTypeName.setCoords(sym.getCoords());
            parse(TokenTag.RECORD);
        } else if (sym.getTag() == TokenTag.BOOLEAN) {
            simpleTypeName.addSymbol(sym);
            simpleTypeName.setCoords(sym.getCoords());
            parse(TokenTag.BOOLEAN);
        } else {
            NumericTypeVar numericType = new NumericTypeVar();
            simpleTypeName.addSymbol(numericType);
            parseNumericType(numericType);
            simpleTypeName.setCoords(numericType.getCoords());
        }
    }

    //NumericType          ::= INT
    //                     |   INTEGER
    //                     |   SMALLINT
    //                     |   BIGINT
    //                     |   REAL
    //                     |   FLOAT  ( '('intConst')' )?
    //                     |   DOUBLE PRECISION
    //                     |   DECIMAL
    //                     |   NUMERIC
    //                     |   BOOLEAN
    private void parseNumericType(NumericTypeVar numericType) throws CloneNotSupportedException {
        numericType.setStart(sym.getStart());
        numericType.addSymbol(sym);
        numericType.setFollow(sym.getFollow());

        if (sym.getTag() == TokenTag.INT) {
            parse(TokenTag.INT);
        } else if (sym.getTag() == TokenTag.INTEGER) {
            parse(TokenTag.INTEGER);
        } else if (sym.getTag() == TokenTag.SMALLINT) {
            parse(TokenTag.SMALLINT);
        } else if (sym.getTag() == TokenTag.REAL) {
            parse(TokenTag.REAL);
        } else if (sym.getTag() == TokenTag.FLOAT) {
            parse(TokenTag.FLOAT);

            if (sym.getTag() == TokenTag.LPAREN) {
                numericType.addSymbol(sym);
                parse(TokenTag.LPAREN);

                Token number = sym;

                numericType.addSymbol(sym);
                parseIntConst();

                Number value = (Number) number.getValue();
                if (value.byteValue() < 1 || value.byteValue() > 53)
                    throw new RuntimeException("Number: " + number + " should be >= 1 and <= 53");

                numericType.addSymbol(sym);
                numericType.setFollow(sym.getFollow());
                parse(TokenTag.RPAREN);
            }
        } else if (sym.getTag() == TokenTag.DOUBLE) {
            parse(TokenTag.DOUBLE);

            numericType.setFollow(sym.getFollow());
            numericType.addSymbol(sym);
            parse(TokenTag.PRECISION);
        } else if (sym.getTag() == TokenTag.DECIMAL) {
            parse(TokenTag.DECIMAL);
        } else if (sym.getTag() == TokenTag.NUMERIC) {
            parse(TokenTag.NUMERIC);
        } else {
            throw new RuntimeException("Invalid symbol at " + sym);
        }
    }

    //CharacterType        ::= CharacterKeyword ( '(' intConst ')' )?
    private void parseCharacterType(CharacterTypeVar characterType) throws CloneNotSupportedException {
        CharacterKeywordVar characterKeyword = new CharacterKeywordVar();
        characterType.addSymbol(characterKeyword);
        parseCharacterKeyword(characterKeyword);
        characterType.setStart(characterKeyword.getStart());
        characterType.setFollow(characterKeyword.getFollow());

        if (sym.getTag() == TokenTag.LPAREN) {
            characterType.addSymbol(sym);
            parse(TokenTag.LPAREN);

            characterType.addSymbol(sym);
            Token number = sym;
            parseIntConst();
            Number value = ((NumberToken) number).getValue();
            if (value.intValue() <= 0)
                throw new RuntimeException("String with negative size: " + number);

            characterType.setFollow(sym.getFollow());
            characterType.addSymbol(sym);
            parse(TokenTag.RPAREN);
        }
    }

    //CharacterKeyword     ::= CHARACTER | CHAR | VARCHAR
    private void parseCharacterKeyword(CharacterKeywordVar characterKeyword) throws CloneNotSupportedException {
        characterKeyword.addSymbol(sym);
        characterKeyword.setStart(sym.getStart());
        characterKeyword.setFollow(sym.getFollow());

        if (sym.getTag() == TokenTag.CHARACTER) {
            parse(TokenTag.CHARACTER);
        } else if (sym.getTag() == TokenTag.CHAR) {
            parse(TokenTag.CHAR);
        } else if (sym.getTag() == TokenTag.VARCHAR) {
            parse(TokenTag.VARCHAR);
        } else {
            throw new RuntimeException("Invalid CHARACTER type at " + sym);
        }
    }

    //DateTimeType         ::= TIMESTAMP ( '(' intConst ')' )? //0 <= intConst < 6
    //                     |   TIME ( '(' intConst ')' )?      //0 <= intConst < 6
    //                     |   DATE
    private void parseDateTimeType(DateTimeTypeVar dateTimeType) throws CloneNotSupportedException {
        dateTimeType.addSymbol(sym);
        dateTimeType.setCoords(sym.getCoords());

        if (sym.getTag() == TokenTag.TIMESTAMP) {
            parse(TokenTag.TIMESTAMP);

            if (sym.getTag() == TokenTag.LPAREN) {
                dateTimeType.addSymbol(sym);
                parse(TokenTag.LPAREN);

                Token number = sym;

                dateTimeType.addSymbol(sym);
                parseIntConst();

                Number value = (Number) number.getValue();
                if (value.byteValue() < 0 || value.byteValue() >= 6)
                    throw new RuntimeException("Number: " + number + " should be >= 0 and < 6");

                dateTimeType.addSymbol(number);

                dateTimeType.addSymbol(sym);
                dateTimeType.setFollow(sym.getFollow());
                parse(TokenTag.RPAREN);
            }
        } else if (sym.getTag() == TokenTag.TIME) {
            parse(TokenTag.TIME);

            if (sym.getTag() == TokenTag.LPAREN) {
                dateTimeType.addSymbol(sym);
                parse(TokenTag.LPAREN);

                Token number = sym;

                dateTimeType.addSymbol(sym);
                parseIntConst();

                Number value = (Number) number.getValue();
                if (value.byteValue() < 0 || value.byteValue() >= 6)
                    throw new RuntimeException("Number: " + number + " should be >= 0 and < 6");

                dateTimeType.addSymbol(number);

                dateTimeType.addSymbol(sym);
                dateTimeType.setFollow(sym.getFollow());
                parse(TokenTag.RPAREN);
            }
        } else if (sym.getTag() == TokenTag.DATE) {
            parse(TokenTag.DATE);
        } else {
            throw new RuntimeException("Invalid Date/Time type at " + sym);
        }
    }

    //TableConstraint      ::= CONSTRAINT IDENT ConstraintElem | ConstraintElem
    private void parseTableConstraint(TableConstraintVar tableConstraint) throws CloneNotSupportedException {
        if (sym.getTag() == TokenTag.CONSTRAINT) {
            tableConstraint.setStart(sym.getStart());
            tableConstraint.addSymbol(sym);
            parse(TokenTag.CONSTRAINT);

            tableConstraint.addSymbol(sym);
            parse(TokenTag.IDENTIFIER);

            ConstraintElemVar constraintElem = new ConstraintElemVar();
            tableConstraint.addSymbol(constraintElem);
            parseConstraintElem(constraintElem);
            tableConstraint.setFollow(constraintElem.getFollow());
        } else {
            ConstraintElemVar constraintElem = new ConstraintElemVar();
            tableConstraint.addSymbol(constraintElem);
            parseConstraintElem(constraintElem);

            tableConstraint.setCoords(constraintElem.getCoords());
        }

        currentTable.addTableConstraint(tableConstraint);
    }

    //ConstraintElem       ::= UNIQUE      '(' IDENT (',' IDENT)* ')'
    //                     |   PRIMARY KEY '(' IDENT (',' IDENT)* ')'
    //                     |   FOREIGN KEY '(' IDENT (',' IDENT)* ')' REFERENCES QualifiedName
    //                         ('(' IDENT (',' IDENT)* ')' )? KeyActions?
    private void parseConstraintElem(ConstraintElemVar constraintElem) throws CloneNotSupportedException {
        constraintElem.addSymbol(sym);
        constraintElem.setStart(sym.getStart());

        if (sym.getTag() == TokenTag.UNIQUE) {
            parse(TokenTag.UNIQUE);

            constraintElem.addSymbol(sym);
            parse(TokenTag.LPAREN);

            constraintElem.addSymbol(sym);
            parse(TokenTag.IDENTIFIER);

            while (sym.getTag() == TokenTag.COMMA) {
                constraintElem.addSymbol(sym);
                parse(TokenTag.COMMA);

                constraintElem.addSymbol(sym);
                parse(TokenTag.IDENTIFIER);
            }

            constraintElem.addSymbol(sym);
            constraintElem.setFollow(sym.getFollow());
            parse(TokenTag.RPAREN);
        } else if (sym.getTag() == TokenTag.PRIMARY) {
            currentTable.setExistsPK(true);
            parse(TokenTag.PRIMARY);

            constraintElem.addSymbol(sym);
            parse(TokenTag.KEY);

            constraintElem.addSymbol(sym);
            parse(TokenTag.LPAREN);

            constraintElem.addSymbol(sym);
            parse(TokenTag.IDENTIFIER);

            while (sym.getTag() == TokenTag.COMMA) {
                constraintElem.addSymbol(sym);
                parse(TokenTag.COMMA);

                constraintElem.addSymbol(sym);
                parse(TokenTag.IDENTIFIER);
            }

            constraintElem.addSymbol(sym);
            constraintElem.setFollow(sym.getFollow());
            parse(TokenTag.RPAREN);
        } else if (sym.getTag() == TokenTag.FOREIGN) {
            parse(TokenTag.FOREIGN);

            constraintElem.addSymbol(sym);
            parse(TokenTag.KEY);

            constraintElem.addSymbol(sym);
            parse(TokenTag.LPAREN);

            constraintElem.addSymbol(sym);
            parse(TokenTag.IDENTIFIER);

            while (sym.getTag() == TokenTag.COMMA) {
                constraintElem.addSymbol(sym);
                parse(TokenTag.COMMA);

                constraintElem.addSymbol(sym);
                parse(TokenTag.IDENTIFIER);
            }

            constraintElem.addSymbol(sym);
            parse(TokenTag.RPAREN);

            constraintElem.addSymbol(sym);
            parse(TokenTag.REFERENCES);

            QualifiedNameVar qualifiedName = new QualifiedNameVar();
            constraintElem.addSymbol(qualifiedName);
            parseQualifiedName(qualifiedName);
            constraintElem.setFollow(qualifiedName.getFollow());

            if (sym.getTag() == TokenTag.LPAREN) {
                constraintElem.addSymbol(sym);
                parse(TokenTag.LPAREN);

                constraintElem.addSymbol(sym);
                parse(TokenTag.IDENTIFIER);

                while (sym.getTag() == TokenTag.COMMA) {
                    constraintElem.addSymbol(sym);
                    parse(TokenTag.COMMA);

                    constraintElem.addSymbol(sym);
                    parse(TokenTag.IDENTIFIER);
                }

                constraintElem.setFollow(sym.getFollow());
                constraintElem.addSymbol(sym);
                parse(TokenTag.RPAREN);
            }

            if (sym.getTag() == TokenTag.ON) {
                KeyActionsVar keyActions = new KeyActionsVar();
                constraintElem.addSymbol(keyActions);
                parseKeyActions(keyActions);
                constraintElem.setFollow(keyActions.getFollow());
            }
        }
    }

    //ColConstraint        ::= CONSTRAINT IDENT ColConstraintElem | ColConstraintElem
    private void parseColConstraint(ColConstraintVar colConstraint) throws  CloneNotSupportedException {
        if (sym.getTag() == TokenTag.CONSTRAINT) {
            colConstraint.addSymbol(sym);
            colConstraint.setStart(sym.getStart());
            parse(TokenTag.CONSTRAINT);

            colConstraint.addSymbol(sym);
            parse(TokenTag.IDENTIFIER);

            ColConstraintElemVar colConstraintElem = new ColConstraintElemVar();
            colConstraint.addSymbol(colConstraintElem);
            parseColConstraintElem(colConstraintElem);
            colConstraint.setFollow(colConstraintElem.getFollow());
        } else {
            ColConstraintElemVar colConstraintElem = new ColConstraintElemVar();
            colConstraint.addSymbol(colConstraintElem);
            parseColConstraintElem(colConstraintElem);
            colConstraint.setCoords(colConstraintElem.getCoords());
        }
    }

    //ColConstraintElem    ::= NOT NULL
    //                     |   NULL
    //                     |   UNIQUE
    //                     |   PRIMARY KEY
    //                     |   CHECK '(' BoolExpr ')'
    //                     |   DEFAULT ConstExpr
    //                     |   REFERENCES  QualifiedName ( '(' IDENT ')' )? KeyActions?
    private void parseColConstraintElem(ColConstraintElemVar colConstraintElem) throws CloneNotSupportedException {
        colConstraintElem.addSymbol(sym);
        colConstraintElem.setStart(sym.getStart());

        if (sym.getTag() == TokenTag.NOT) {
            parse(TokenTag.NOT);

            colConstraintElem.setFollow(sym.getFollow());
            colConstraintElem.addSymbol(sym);
            parse(TokenTag.NULL);
        } else if (sym.getTag() == TokenTag.NULL) {
            colConstraintElem.setFollow(sym.getFollow());
            parse(TokenTag.NULL);
        } else if (sym.getTag() == TokenTag.UNIQUE) {
            colConstraintElem.setFollow(sym.getFollow());
            parse(TokenTag.UNIQUE);
        } else if (sym.getTag() == TokenTag.PRIMARY) {
            currentTable.setExistsPK(true);
            parse(TokenTag.PRIMARY);

            colConstraintElem.setFollow(sym.getFollow());
            colConstraintElem.addSymbol(sym);
            parse(TokenTag.KEY);
        } else if (sym.getTag() == TokenTag.CHECK) {
            parse(TokenTag.CHECK);

            colConstraintElem.addSymbol(sym);
            parse(TokenTag.LPAREN);

            BoolExprVar boolExpr = new BoolExprVar();
            colConstraintElem.addSymbol(boolExpr);
            parseBoolExpr(boolExpr);

            colConstraintElem.setFollow(sym.getFollow());
            colConstraintElem.addSymbol(sym);
            parse(TokenTag.RPAREN);
        } else if (sym.getTag() == TokenTag.DEFAULT) {
            parse(TokenTag.DEFAULT);

            ConstExprVar constExpr = new ConstExprVar();
            colConstraintElem.addSymbol(constExpr);
            parseConstExpr(constExpr);
            colConstraintElem.setFollow(constExpr.getFollow());
        } else if (sym.getTag() == TokenTag.REFERENCES) {
            parse(TokenTag.REFERENCES);

            QualifiedNameVar qualifiedName = new QualifiedNameVar();
            colConstraintElem.addSymbol(qualifiedName);
            parseQualifiedName(qualifiedName);
            colConstraintElem.setFollow(qualifiedName.getFollow());

            if (sym.getTag() == TokenTag.LPAREN) {
                colConstraintElem.addSymbol(sym);
                parse(TokenTag.LPAREN);

                colConstraintElem.addSymbol(sym);
                parse(TokenTag.IDENTIFIER);

                colConstraintElem.addSymbol(sym);
                colConstraintElem.setFollow(sym.getFollow());
                parse(TokenTag.RPAREN);
            }
